--- a/config/nginx/conf.d/omanko.porn.conf
+++ b/config/nginx/conf.d/omanko.porn.conf
@@ -55,6 +55,8 @@ server {
   gzip_http_version 1.1;
   gzip_types application/atom+xml application/json image/svg+xml;
 
+  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+  add_header Content-Security-Policy "child-src 'none'; connect-src 'self' wss://omanko.porn; default-src 'self'; font-src 'self' https://assets.omanko.porn; img-src https: data:; media-src https:; object-src 'none'; report-uri https://omanko.report-uri.io/r/default/csp/enforce; script-src 'self' https://assets.omanko.porn; style-src 'self' 'unsafe-inline' https://assets.omanko.porn";
   add_header Referrer-Policy no-referrer;
 
   location / {
