add cache-control to files proxy

--- a/config/nginx/conf.d/omanko.porn.conf
+++ b/config/nginx/conf.d/omanko.porn.conf
@@ -164,16 +164,19 @@ server {
   sendfile             on;
   client_max_body_size 0;
 
+  add_header Cache-Control "max-age=31536000, public, immutable";
+  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+  add_header Access-Control-Allow-Origin https://omanko.porn;
+
   location / {
     resolver 8.8.8.8;
     set $s3_host omanko-porn-storage.c.sakurastorage.jp;
     proxy_pass https://$s3_host$uri;
     proxy_set_header Host $s3_host;
     proxy_set_header Authorization "";
-    proxy_hide_header x-amz-id-2;
-    proxy_hide_header x-amz-request-id;
     proxy_hide_header Set-Cookie;
+    proxy_hide_header ETag;
     proxy_ignore_headers Set-Cookie;
-    proxy_buffering off;
+    proxy_buffering on;
   }
 }
