--- a/config/nginx/conf.d/omanko.porn.conf
+++ b/config/nginx/conf.d/omanko.porn.conf
@@ -24,6 +24,9 @@ server {
   }
 
   location / {
+    if ($host = "www.omanko.porn") {
+      return 301 https://omanko.porn$request_uri;
+    }
     return 301 https://$host$request_uri;
   }
 }
@@ -32,6 +35,7 @@ server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
   server_name omanko.porn;
+  server_name www.omanko.porn;
 
   ssl_protocols TLSv1.2;
   ssl_ciphers EECDH+AESGCM:EECDH+AES;
@@ -54,6 +58,10 @@ server {
   gzip_buffers 16 8k;
   gzip_http_version 1.1;
   gzip_types application/atom+xml application/json image/svg+xml;
+
+  if ($host != "omanko.porn") {
+    return 301 https://omanko.porn$request_uri;
+  }
 
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
   add_header Content-Security-Policy "child-src 'none'; connect-src 'self' wss://omanko.porn; default-src 'self'; font-src 'self' https://assets.omanko.porn; img-src https: data:; media-src https:; object-src 'none'; report-uri https://omanko.report-uri.io/r/default/csp/enforce; script-src 'self' https://assets.omanko.porn; style-src 'self' 'unsafe-inline' https://assets.omanko.porn";
@@ -99,16 +107,6 @@ server {
   }
 
   error_page 500 501 502 503 504 /500.html;
-}
-
-server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  server_name www.omanko.porn;
-
-  location / {
-    return 301 https://omanko.porn$request_uri;
-  }
 }
 
 server {
