--- a/.env.production.sample
+++ b/.env.production.sample
@@ -1,1 +1,1 @@
-# https://github.com/tootsuite/mastodon/blob/master/.env.production.sample
+# see https://github.com/tootsuite/mastodon/blob/master/.env.production.sample
