--- a/config/nginx/conf.d/omanko.porn.conf
+++ b/config/nginx/conf.d/omanko.porn.conf
@@ -46,7 +46,6 @@ server {
   ssl_certificate     /etc/letsencrypt/live/omanko.porn/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/omanko.porn/privkey.pem;
 
-  keepalive_timeout 70;
   client_max_body_size 0;
 
   root /usr/share/nginx/html;
@@ -72,37 +71,20 @@ server {
   }
 
   location @proxy {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto https;
+    proxy_pass http://mastodon_web_app;
+    include /etc/nginx/proxy_params;
     proxy_hide_header Strict-Transport-Security;
     proxy_pass_header Server;
-
-    proxy_pass http://mastodon_web_app;
     proxy_buffering off;
     proxy_redirect off;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-
     tcp_nodelay on;
   }
 
   location /api/v1/streaming {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto https;
-    proxy_set_header Proxy "";
-
     proxy_pass http://mastodon_streaming_app;
+    include /etc/nginx/proxy_params;
     proxy_buffering off;
     proxy_redirect off;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-
     tcp_nodelay on;
   }
 
@@ -122,10 +104,6 @@ server {
 
   ssl_certificate     /etc/letsencrypt/live/omanko.porn/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/omanko.porn/privkey.pem;
-
-  keepalive_timeout    70;
-  sendfile             on;
-  client_max_body_size 0;
 
   root /usr/share/nginx/html;
 
@@ -157,10 +135,6 @@ server {
 
   ssl_certificate     /etc/letsencrypt/live/omanko.porn/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/omanko.porn/privkey.pem;
-
-  keepalive_timeout    70;
-  sendfile             on;
-  client_max_body_size 0;
 
   add_header Cache-Control "max-age=31536000, public, immutable";
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
