--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -6,6 +6,7 @@ pid /var/run/nginx.pid;
 
 events {
   worker_connections 10240;
+  accept_mutex_delay 100ms;
 }
 
 http {
@@ -19,6 +20,7 @@ http {
   access_log /var/log/nginx/access.log;
 
   sendfile on;
+  open_file_cache max=100 inactive=20s;
   tcp_nopush on;
 
   keepalive_timeout 65;
