--- a/config/nginx/conf.d/omanko.porn.conf
+++ b/config/nginx/conf.d/omanko.porn.conf
@@ -11,6 +11,9 @@ upstream mastodon_streaming_app {
   server streaming:4000;
 }
 
+proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=CACHE:128m max_size=512m inactive=1d;
+proxy_temp_path /var/cache/nginx/tmp;
+
 server {
   listen 80;
   listen [::]:80;
@@ -149,6 +152,11 @@ server {
     proxy_hide_header Set-Cookie;
     proxy_hide_header ETag;
     proxy_ignore_headers Set-Cookie;
-    proxy_buffering on;
+    proxy_ignore_headers Cache-Control;
+    proxy_cache CACHE;
+    proxy_cache_valid 200 1d;
+    proxy_cache_valid 404 10s;
+    proxy_cache_key https://$host$request_uri;
+    add_header X-Cache $upstream_cache_status;
   }
 }
