--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./data/redis:/data
   web:
     restart: always
-    image: gargron/mastodon:latest
+    image: gargron/mastodon:v1.3.2
     env_file: .env.production
     command: ./bin/rails s -p 3000
     depends_on:
@@ -20,7 +20,7 @@ services:
       - ./public/assets:/mastodon/public/assets
   streaming:
     restart: always
-    image: gargron/mastodon:latest
+    image: gargron/mastodon:v1.3.2
     env_file: .env.production
     command: yarn start
     depends_on:
@@ -28,7 +28,7 @@ services:
       - redis
   sidekiq:
     restart: always
-    image: gargron/mastodon:latest
+    image: gargron/mastodon:v1.3.2
     env_file: .env.production
     command: ./bin/bundle exec sidekiq -q default -q mailers -q pull -q push
     depends_on:
