--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./data/redis:/data
   web:
     restart: always
-    image: gargron/mastodon:v1.3.2
+    image: gargron/mastodon:latest
     env_file: .env.production
     command: ./bin/rails s -p 3000
     depends_on:
@@ -18,9 +18,10 @@ services:
       - redis
     volumes:
       - ./public/assets:/mastodon/public/assets
+      - ./public/packs:/mastodon/public/packs
   streaming:
     restart: always
-    image: gargron/mastodon:v1.3.2
+    image: gargron/mastodon:latest
     env_file: .env.production
     command: yarn start
     depends_on:
@@ -28,7 +29,7 @@ services:
       - redis
   sidekiq:
     restart: always
-    image: gargron/mastodon:v1.3.2
+    image: gargron/mastodon:latest
     env_file: .env.production
     command: ./bin/bundle exec sidekiq -q default -q mailers -q pull -q push
     depends_on:
