--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     restart: always
     image: gargron/mastodon:latest
     env_file: .env.production
-    command: ./bin/bundle exec sidekiq -q default -q mailers -q pull -q push
+    command: ./bin/bundle exec sidekiq
     depends_on:
       - db
       - redis
