--- a/config/nginx/conf.d/omanko.porn.conf
+++ b/config/nginx/conf.d/omanko.porn.conf
@@ -66,7 +66,7 @@ server {
   }
 
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
-  add_header Content-Security-Policy "child-src https:; connect-src 'self' wss://omanko.porn; default-src 'self'; font-src 'self' https://assets.omanko.porn; img-src https: data:; media-src https:; object-src 'none'; report-uri https://omanko.report-uri.io/r/default/csp/enforce; script-src 'self' https://assets.omanko.porn; style-src 'self' 'unsafe-inline' https://assets.omanko.porn";
+  add_header Content-Security-Policy "child-src https:; connect-src 'self' wss://omanko.porn; default-src 'self'; font-src 'self' https://assets.omanko.porn; img-src https: data: blob:; media-src https:; object-src 'none'; report-uri https://omanko.report-uri.io/r/default/csp/enforce; script-src 'self' https://assets.omanko.porn; style-src 'self' 'unsafe-inline' https://assets.omanko.porn";
   add_header Referrer-Policy no-referrer;
 
   location / {
