--- a/config/nginx/conf.d/files.omanko.porn.conf
+++ b/config/nginx/conf.d/files.omanko.porn.conf
@@ -1,3 +1,6 @@
+proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=CACHE:128m max_size=512m inactive=1d;
+proxy_temp_path /var/cache/nginx/tmp;
+
 server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
