--- a/config/nginx/conf.d/files.omanko.porn.conf
+++ b/config/nginx/conf.d/files.omanko.porn.conf
@@ -2,8 +2,8 @@ proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=CACHE:128m max_size
 proxy_temp_path /var/cache/nginx/tmp;
 
 server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
+  listen 80;
+  listen [::]:80;
   server_name files.omanko.porn;
 
   ssl_protocols TLSv1.2;
