--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -31,11 +31,30 @@ hosts:
     header.set: "Referrer-Policy: no-referrer"
     paths:
       /:
-        file.dir: /var/www/html
+        mruby.handler: |
+          assets = {
+            'common.css' => 'style',
+            'common.js' => 'script',
+          }
+
+          manifest = JSON.parse(File.read('/var/www/html/packs/manifest.json'))
+          link = manifest
+            .select { |name, _| assets.keys.include?(name) }
+            .map { |name, path| "<#{path}>; rel=preload; as=#{assets[name]}" }
+            .join(', ')
+
+          headers = {
+            'Link' => link,
+          }
+
+          lambda do |env|
+            [399, headers, []]
+          end
         proxy.reverse.url: "http://web:3000/"
         proxy.preserve-host: ON
         proxy.header.set: "X-Forwarded-Proto: https"
         proxy.timeout.io: 3000
+        file.dir: /var/www/html
       /api/v1/streaming:
         proxy.reverse.url: "http://streaming:4000/"
         proxy.preserve-host: ON
