--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -27,7 +27,7 @@ hosts:
       port: 443
       ssl: !file /etc/h2o/default_ssl.conf
     header.set: "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload"
-    header.set: "Content-Security-Policy: child-src https:; connect-src 'self' wss://omanko.porn; default-src 'self'; font-src 'self' https://assets.omanko.porn; img-src https: data: blob:; media-src https:; object-src 'none'; report-uri https://omanko.report-uri.io/r/default/csp/enforce; script-src 'self' https://assets.omanko.porn; style-src 'self' 'unsafe-inline' https://assets.omanko.porn"
+    header.set: "Content-Security-Policy: child-src https:; connect-src 'self' wss://omanko.porn; default-src 'self'; font-src 'self' https://assets.omanko.porn https://fonts.gstatic.com; img-src https: data: blob:; media-src https:; object-src 'none'; report-uri https://omanko.report-uri.io/r/default/csp/enforce; script-src 'self' https://assets.omanko.porn; style-src 'self' 'unsafe-inline' https://assets.omanko.porn https://fonts.googleapis.com"
     header.set: "Referrer-Policy: no-referrer"
     paths:
       /:
