--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -31,37 +31,36 @@ hosts:
     header.set: "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload"
     header.set: "Content-Security-Policy: child-src https:; connect-src 'self' wss://omanko.porn; default-src 'self'; font-src 'self' https://assets.omanko.porn https://fonts.gstatic.com; img-src https: data: blob:; media-src https:; object-src 'none'; report-uri https://omanko.report-uri.io/r/default/csp/enforce; script-src 'self' https://assets.omanko.porn; style-src 'self' 'unsafe-inline' https://assets.omanko.porn https://fonts.googleapis.com"
     header.set: "Referrer-Policy: no-referrer"
+    proxy.preserve-host: ON
+    proxy.header.set: "X-Forwarded-Proto: https"
+    proxy.timeout.io: 3000
     paths:
       /:
-        mruby.handler: |
-          assets = {
-            'common.css' => 'style',
-            'common.js' => 'script',
-          }
+        - mruby.handler: |
+            assets = {
+              'common.css' => 'style',
+              'common.js' => 'script',
+            }
 
-          manifest = JSON.parse(File.read('/var/www/html/packs/manifest.json'))
-          link = manifest
-            .select { |name, _| assets.keys.include?(name) }
-            .map { |name, path| "<#{path}>; rel=preload; as=#{assets[name]}" }
-            .join(', ')
+            manifest = JSON.parse(File.read('/var/www/html/packs/manifest.json'))
+            link = manifest
+              .select { |name, _| assets.keys.include?(name) }
+              .map { |name, path| "<#{path}>; rel=preload; as=#{assets[name]}" }
+              .join("\n")
 
-          headers = {
-            'Link' => link,
-          }
+            headers = {
+              'Link' => link,
+            }
 
-          lambda do |env|
-            [399, headers, []]
-          end
-        file.dir: /var/www/html
-        proxy.reverse.url: "http://web:3000/"
-        proxy.preserve-host: ON
-        proxy.header.set: "X-Forwarded-Proto: https"
-        proxy.timeout.io: 3000
+            lambda do |env|
+              [399, headers, []]
+            end
+        - file.dir: /var/www/html
+        - proxy.reverse.url: "http://web:3000/"
+      /api:
+        proxy.reverse.url: "http://web:3000/api"
       /api/v1/streaming:
-        proxy.reverse.url: "http://streaming:4000/"
-        proxy.preserve-host: ON
-        proxy.header.set: "X-Forwarded-Proto: https"
-        proxy.timeout.io: 3000
+        proxy.reverse.url: "http://streaming:4000/api/v1/streaming"
         proxy.websocket: ON
         proxy.websocket.timeout: 30000
       /sw.js:
@@ -70,8 +69,6 @@ hosts:
       /emoji:
         header.set: "Cache-Control: max-age=31536000, public, immutable"
         proxy.reverse.url: "http://web:3000/emoji"
-        proxy.preserve-host: ON
-        proxy.header.set: "X-Forwarded-Proto: https"
         proxy.timeout.io: 30000
       /assets:
         redirect:
