--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -102,3 +102,22 @@ hosts:
         proxy.reverse.url: "http://cache:80/"
         proxy.preserve-host: ON
         proxy.timeout.io: 30000
+
+  default:
+    listen:
+      port: 80
+    paths:
+      /:
+        - mruby.handler: |
+            lambda do |env|
+              path = [env['PATH_INFO'], env['QUERY_STRING']].compact.join('?')
+              uri = "https://#{env['HTTP_HOST']}#{path}"
+              headers = {
+                'Content-Type' => 'text/plain',
+                'Location' => uri,
+              }
+
+              [301, headers, ['']]
+            end
+      /.well-known/acme-challenge:
+        file.dir: /var/www/html
