--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -103,6 +103,17 @@ hosts:
         proxy.preserve-host: ON
         proxy.timeout.io: 30000
 
+  "www.omanko.porn:443":
+    listen:
+      port: 443
+      ssl: !file /etc/h2o/default_ssl.conf
+    header.set: "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload"
+    paths:
+      /:
+        redirect:
+          status: 301
+          url: https://omanko.porn/
+
   default:
     listen:
       port: 80
@@ -110,8 +121,11 @@ hosts:
       /:
         - mruby.handler: |
             lambda do |env|
-              path = [env['PATH_INFO'], env['QUERY_STRING']].compact.join('?')
-              uri = "https://#{env['HTTP_HOST']}#{path}"
+              host = env['HTTP_HOST']
+              host = host == 'www.omanko.porn' ? 'omanko.porn' : host
+              path = [env['PATH_INFO'], env['QUERY_STRING']].reject(&:empty?).join('?')
+              uri = "https://#{host}#{path}"
+
               headers = {
                 'Content-Type' => 'text/plain',
                 'Location' => uri,
