remove mruby handler

--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -36,27 +36,8 @@ hosts:
     proxy.timeout.io: 3000
     paths:
       /:
-        - file.dir: /var/www/html
-        - mruby.handler: |
-            assets = {
-              'common.css' => 'style',
-              'common.js' => 'script',
-            }
-
-            manifest = JSON.parse(File.read('/var/www/html/packs/manifest.json'))
-            link = manifest
-              .select { |name, _| assets.keys.include?(name) }
-              .map { |name, path| "<#{path}>; rel=preload; as=#{assets[name]}" }
-              .join("\n")
-
-            headers = {
-              'Link' => link,
-            }
-
-            lambda do |env|
-              [399, headers, []]
-            end
-        - proxy.reverse.url: "http://web:3000/"
+        file.dir: /var/www/html
+        proxy.reverse.url: "http://web:3000/"
       /api:
         proxy.reverse.url: "http://web:3000/api"
       /api/v1/streaming:
