--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -115,4 +115,4 @@ hosts:
               [301, headers, ['']]
             end
       /.well-known/acme-challenge:
-        file.dir: /var/www/html
+        file.dir: /var/www/html/.well-known/acme-challenge
