--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -111,8 +111,14 @@ hosts:
                 'Content-Type' => 'text/plain',
                 'Location' => uri,
               }
+              body = [
+                '<!DOCTYPE html>',
+                '<title>Moved</title>',
+                %(<p>The document has moved <a href="#{uri}">here</a>),
+                '',
+              ].join("\n")
 
-              [301, headers, ['']]
+              [301, headers, [body]]
             end
       /.well-known/acme-challenge:
         file.dir: /var/www/html/.well-known/acme-challenge
