--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -108,7 +108,7 @@ hosts:
               uri = "https://#{host}#{path}"
 
               headers = {
-                'Content-Type' => 'text/plain',
+                'Content-Type' => 'text/html',
                 'Location' => uri,
               }
               body = [
