proxy.timeout.io: 10000

--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -40,6 +40,7 @@ hosts:
         proxy.reverse.url: "http://web:3000/"
       /api:
         proxy.reverse.url: "http://web:3000/api"
+        proxy.timeout.io: 10000
       /api/v1/streaming:
         proxy.reverse.url: "http://streaming:4000/api/v1/streaming"
         proxy.websocket: ON
