limit-request-body: 3GiB

--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -3,6 +3,8 @@ max-connections: 10240
 access-log: /dev/stdout
 error-log: /dev/stderr
 
+limit-request-body: 3221225472 # 1024 * 1024 * 1024 * 3 (3GB)
+
 http2-casper: ON
 
 compress:
