longer timeout time

--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -40,9 +40,15 @@ hosts:
       /:
         file.dir: /var/www/html
         proxy.reverse.url: "http://web:3000/"
+      /settings:
+        proxy.reverse.url: "http://web:3000/settings"
+        proxy.timeout.io: 10000
+      /admin:
+        proxy.reverse.url: "http://web:3000/aadmin"
+        proxy.timeout.io: 10000
       /api:
         proxy.reverse.url: "http://web:3000/api"
-        proxy.timeout.io: 10000
+        proxy.timeout.io: 30000
       /api/v1/streaming:
         proxy.reverse.url: "http://streaming:4000/api/v1/streaming"
         proxy.websocket: ON
@@ -85,7 +91,7 @@ hosts:
       /:
         proxy.reverse.url: "http://cache:80/"
         proxy.preserve-host: ON
-        proxy.timeout.io: 30000
+        proxy.timeout.io: 60000
 
   "www.omanko.porn:443":
     listen:
