--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -38,6 +38,8 @@ hosts:
     proxy.timeout.io: 3000
     paths:
       /:
+        header.add: "Link: <https://assets.omanko.porn>; rel=preconnect"
+        header.add: "Link: <https://files.omanko.porn>; rel=preconnect"
         file.dir: /var/www/html
         proxy.reverse.url: "http://web:3000/"
       /settings:
