--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -46,7 +46,7 @@ hosts:
         proxy.reverse.url: "http://web:3000/settings"
         proxy.timeout.io: 10000
       /admin:
-        proxy.reverse.url: "http://web:3000/aadmin"
+        proxy.reverse.url: "http://web:3000/admin"
         proxy.timeout.io: 10000
       /api:
         proxy.reverse.url: "http://web:3000/api"
