--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -114,7 +114,7 @@ hosts:
         - mruby.handler: |
             lambda do |env|
               host = env['HTTP_HOST']
-              host = host == 'www.omanko.porn' ? 'omanko.porn' : host
+              host = 'omanko.porn' if host == 'www.omanko.porn'
               path = [env['PATH_INFO'], env['QUERY_STRING']].reject(&:empty?).join('?')
               uri = "https://#{host}#{path}"
 
