Disable Rack::Deflater

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - ./public/assets:/mastodon/public/assets
       - ./public/packs:/mastodon/public/packs
+      - ./config/mastodon/initializers/deflater.rb:/mastodon/config/initializers/deflater.rb
   streaming:
     <<: *mastodon
     command: yarn start
