--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -81,6 +81,11 @@ hosts:
     paths:
       /:
         file.dir: /var/www/html
+      /emoji:
+        proxy.reverse.url: "http://web:3000/emoji"
+        proxy.preserve-host: ON
+        proxy.header.set: "X-Forwarded-Proto: https"
+        proxy.timeout.io: 30000
 
   "files.omanko.porn:443":
     listen:
