--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.0'
 services:
+  statsd:
+    image: datadog/docker-dd-agent:latest
+    env_file: .env.datadog
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /proc/:/host/proc/:ro
+      - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
   db:
     image: postgres:alpine
     volumes:
