--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - /proc/:/host/proc/:ro
       - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
   db:
-    image: postgres:alpine
+    image: postgres:9-alpine
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
   redis:
@@ -45,7 +45,7 @@ services:
       - ./config/nginx:/etc/nginx:ro
       - ./public:/usr/share/nginx/html:ro
   front:
-    image: ykzts/h2o:edge
+    image: ykzts/h2o:2.2.3
     ports:
       - "80:80"
       - "443:443"
