--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -12,7 +12,7 @@ compress:
   - br
 
 file.etag: OFF
-file.mime.settypes:
+file.mime.addtypes:
   "application/javascript":
     extensions:
       - .js
