--- a/config/nginx/conf.d/files.omanko.porn.conf
+++ b/config/nginx/conf.d/files.omanko.porn.conf
@@ -1,32 +1,26 @@
 proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=CACHE:128m max_size=512m inactive=1d;
 proxy_temp_path /var/cache/nginx/tmp;
 
+upstream storage_backend {
+  server storage:9000;
+}
+
 server {
   listen 80;
   listen [::]:80;
   server_name files.omanko.porn;
 
-  ssl_protocols TLSv1.2;
-  ssl_ciphers EECDH+AESGCM:EECDH+AES;
-  ssl_ecdh_curve prime256v1;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-
-  ssl_certificate     /etc/letsencrypt/live/omanko.porn/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/omanko.porn/privkey.pem;
-
   location / {
-    resolver 8.8.8.8;
-    set $s3_host omanko-porn-storage.c.sakurastorage.jp;
     add_header Cache-Control "max-age=31536000, public, immutable";
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
     add_header Access-Control-Allow-Origin https://omanko.porn;
     add_header X-Cache $upstream_cache_status;
-    proxy_pass https://$s3_host$uri;
-    proxy_set_header Host $s3_host;
+    proxy_pass http://storage_backend/omanko-porn-storage$uri;
+    proxy_set_header Host $host;
     proxy_set_header Authorization "";
     proxy_hide_header Set-Cookie;
     proxy_hide_header ETag;
+    proxy_hide_header X-Amz-Request-Id;
     proxy_ignore_headers Set-Cookie;
     proxy_ignore_headers Cache-Control;
     proxy_cache CACHE;
