--- a/config/nginx/conf.d/files.omanko.porn.conf
+++ b/config/nginx/conf.d/files.omanko.porn.conf
@@ -28,4 +28,9 @@ server {
     proxy_cache_valid 404 10s;
     proxy_cache_key https://$host$request_uri;
   }
+
+  location = / {
+    default_type text/plain;
+    return 403 "403\n";
+  }
 }
