--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -57,6 +57,14 @@ hosts:
       /admin:
         proxy.reverse.url: "http://web:3000/admin"
         proxy.timeout.io: 10000
+      /pghero:
+        header.unset: Content-Security-Policy
+        proxy.reverse.url: "http://web:3000/pghero"
+        proxy.timeout.io: 10000
+      /sidekiq:
+        header.unset: Content-Security-Policy
+        proxy.reverse.url: "http://web:3000/sidekiq"
+        proxy.timeout.io: 10000
       /api:
         proxy.reverse.url: "http://web:3000/api"
         proxy.timeout.io: 30000
