--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -50,38 +50,7 @@ hosts:
         header.add: "Link: <https://assets.omanko.porn>; rel=preconnect"
         header.add: "Link: <https://files.omanko.porn>; rel=preconnect"
         file.dir: /var/www/html
-        mruby.handler: |
-          class Manifest
-            ASSETS = {
-              'common.css' => 'style',
-              'common.js' => 'script',
-            }.freeze
-
-            def initialize(path)
-              @manifest = JSON.parse(File.read(path))
-            end
-
-            def call(env)
-              [399, override_headers(env), []]
-            end
-
-            private
-
-            def override_headers(env = {})
-              return {} if env['REQUEST_METHOD']&.downcase != 'get'
-
-              accepts = env['HTTP_ACCEPT']&.split(/,\s*/) || []
-              return {} unless accepts.include?('text/html')
-
-              path = env['PATH_INFO'] || '/'
-              return {} unless path =~ %r{\A/(?:(?:about|terms|users|web|@[^/]+)/?|\z)}
-
-              push_paths = @manifest.select { |name, _| ASSETS.has_key?(name) }
-              { 'link' => push_paths.map { |name, path| "<#{path}>; rel=preload; as=#{ASSETS[name]}" }.join("\n") }
-            end
-          end
-
-          Manifest.new('/var/www/html/packs/manifest.json')
+        mruby.handler-file: /etc/h2o/manifest.rb
         proxy.reverse.url: "http://web:3000/"
       /settings:
         proxy.reverse.url: "http://web:3000/settings"
