--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -18,6 +18,11 @@ file.mime.addtypes:
       - .js
     is_compressible: YES
     priority: highest
+  "image/vnd.microsoft.icon":
+    extensions:
+      - .ico
+    is_compressible: YES
+    priority: normal
   "text/css":
     extensions:
       - .css
