--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -77,6 +77,9 @@ hosts:
         proxy.reverse.url: "http://streaming:4000/api/v1/streaming"
         proxy.websocket: ON
         proxy.websocket.timeout: 30000
+      /favicon.ico:
+        header.set: "Cache-Control: max-age=604800, public, immutable"
+        file.file: /var/www/html/favicon.ico
       /sw.js:
         expires: 0 day
         file.file: /var/www/html/assets/sw.js
