--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -94,22 +94,6 @@ hosts:
         header.add: "Cache-Control: max-age=31536000, public, immutable"
         file.dir: /var/www/html/packs
 
-  "assets.omanko.porn:443":
-    listen:
-      port: 443
-      ssl: !file /etc/h2o/default_ssl.conf
-    header.add: "Cache-Control: max-age=31536000, public, immutable"
-    header.add: "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload"
-    header.add: "Access-Control-Allow-Origin: https://omanko.porn"
-    paths:
-      /:
-        file.dir: /var/www/html
-      /emoji:
-        proxy.reverse.url: "http://web:3000/emoji"
-        proxy.preserve-host: ON
-        proxy.header.set: "X-Forwarded-Proto: https"
-        proxy.timeout.io: 30000
-
   "files.omanko.porn:443":
     listen:
       port: 443
@@ -122,6 +106,9 @@ hosts:
         proxy.reverse.url: "http://cache:80/"
         proxy.preserve-host: ON
         proxy.timeout.io: 60000
+      /favicon.ico:
+        header.add: "Cache-Control: max-age=604800, public, immutable"
+        file.file: /var/www/html/favicon.ico
 
   "www.omanko.porn:443":
     listen:
