--- a/config/nginx/conf.d/files.omanko.porn.conf
+++ b/config/nginx/conf.d/files.omanko.porn.conf
@@ -2,7 +2,7 @@ proxy_cache_path /var/cache/nginx/cache levels=1:2 keys_zone=CACHE:128m max_size
 proxy_temp_path /var/cache/nginx/tmp;
 
 upstream storage_backend {
-  server storage:9000;
+  server webp-proxy:8080;
 }
 
 server {
