Split storage server

--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -103,7 +103,7 @@ hosts:
     header.set: "Access-Control-Allow-Origin: https://omanko.porn"
     paths:
       /:
-        proxy.reverse.url: "http://cache:80/"
+        proxy.reverse.url: "http://203.104.213.199:80/"
         proxy.preserve-host: ON
         proxy.timeout.io: 60000
       /favicon.ico:
