--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     command: ./bin/rails s -p 3000
     depends_on:
       - redis
+    extra_hosts:
+      - storage.omanko.porn:192.168.0.12
     volumes:
       - ./config/mastodon/initializers/deflater.rb:/mastodon/config/initializers/deflater.rb
       - ./data/mastodon/cache:/mastodon/tmp/cache
