--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -46,7 +46,7 @@ hosts:
         url: /500.html
     header.set: "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload"
     header.set: "Content-Security-Policy: child-src https:; connect-src 'self' wss://omanko.porn; default-src 'self'; font-src 'self' https://fonts.gstatic.com; img-src https: data: blob:; media-src https:; object-src 'none'; report-uri https://omanko.report-uri.io/r/default/csp/enforce; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; upgrade-insecure-requests"
-    header.set: "Referrer-Policy: no-referrer"
+    header.set: "Referrer-Policy: same-origin"
     proxy.preserve-host: ON
     proxy.header.set: "X-Forwarded-Proto: https"
     proxy.timeout.io: 3000
