Enable early hints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     restart: always
     image: ${MASTODON_IMAGE:-tootsuite/mastodon:edge}
     env_file: .env.production
-    command: ./bin/rails s -p 3000
+    command: ./bin/rails s -p 3000 --early-hints
     depends_on:
       - redis
     extra_hosts:
