Single file yaml

--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -34,7 +34,13 @@ hosts:
   "omanko.porn:443":
     listen:
       port: 443
-      ssl: !file /etc/h2o/default_ssl.conf
+      ssl: &default_ssl
+        key-file: /etc/letsencrypt/live/omanko.porn/privkey.pem
+        certificate-file: /etc/letsencrypt/live/omanko.porn/fullchain.pem
+        minimum-version: TLSv1.2
+        cipher-suite: EECDH+AESGCM:EECDH+AES
+        cipher-preference: server
+        #dh-file:
     error-doc:
       - status: 500
         url: /500.html
@@ -96,7 +102,8 @@ hosts:
   "files.omanko.porn:443":
     listen:
       port: 443
-      ssl: !file /etc/h2o/default_ssl.conf
+      ssl:
+        <<: *default_ssl
     header.set: "Cache-Control: max-age=31536000, public, immutable"
     header.set: "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload"
     header.set: "Access-Control-Allow-Origin: https://omanko.porn"
@@ -112,7 +119,8 @@ hosts:
   "www.omanko.porn:443":
     listen:
       port: 443
-      ssl: !file /etc/h2o/default_ssl.conf
+      ssl:
+        <<: *default_ssl
     header.set: "Strict-Transport-Security: max-age=31536000; includeSubDomains; preload"
     paths:
       /:
