proxy.websocket.timeout: 3600000

--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -81,7 +81,7 @@ hosts:
       /api/v1/streaming:
         proxy.reverse.url: "http://streaming:4000/api/v1/streaming"
         proxy.websocket: ON
-        proxy.websocket.timeout: 30000
+        proxy.websocket.timeout: 3600000
       /favicon.ico:
         header.set: "Cache-Control: max-age=604800, public, immutable"
         file.file: /var/www/html/favicon.ico
