--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -87,17 +87,23 @@ hosts:
         file.file: /var/www/html/favicon.ico
       /sw.js:
         expires: 0 day
-        file.file: /var/www/html/assets/sw.js
+        proxy.reverse.url: "http://web:3000/assets/sw.js"
       /emoji:
         header.set: "Cache-Control: max-age=31536000, public, immutable"
         proxy.reverse.url: "http://web:3000/emoji"
         proxy.timeout.io: 30000
       /assets:
         header.add: "Cache-Control: max-age=31536000, public, immutable"
-        file.dir: /var/www/html/assets
+        proxy.reverse.url: "http://web:3000/assets"
+        proxy.timeout.io: 30000
       /packs:
         header.add: "Cache-Control: max-age=31536000, public, immutable"
-        file.dir: /var/www/html/packs
+        proxy.reverse.url: "http://web:3000/packs"
+        proxy.timeout.io: 30000
+      /packs/manifest.json:
+        expires: 0 day
+        proxy.reverse.url: "http://web:3000/packs/manifest.json"
+        proxy.timeout.io: 30000
 
   "files.omanko.porn:443":
     listen:
