--- a/config/h2o/h2o.conf
+++ b/config/h2o/h2o.conf
@@ -35,8 +35,8 @@ hosts:
     listen:
       port: 443
       ssl: &default_ssl
-        key-file: /etc/letsencrypt/live/omanko.porn/privkey.pem
-        certificate-file: /etc/letsencrypt/live/omanko.porn/fullchain.pem
+        key-file: /etc/lego/certificates/omanko.porn.key
+        certificate-file: /etc/lego/certificates/omanko.porn.crt
         minimum-version: TLSv1.2
         cipher-suite: EECDH+AESGCM:EECDH+AES
         cipher-preference: server
